--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -120,6 +120,25 @@ bookmark.models.Bookmark.__str__()에서 지정하였음. -->
 {% endfor %}
 </ul>
 {% endif %}
+
+ <table>
+  <tr>
+    <th>이름</th>
+    <th>나이</th>
+    <th>점수</th>
+  </tr>
+  <tr>
+    <td>철수</td>
+    <td>23세</td>
+    <td>70점</td>
+  </tr>
+  <tr>
+    <td>영희</td>
+    <td>21세</td>
+    <td>89점</td>
+  </tr>
+</table>
+
 </div>
 </body>
 </html>
