--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -76,8 +76,8 @@ color: white;
 </tr>
 {% for bookmark in object_list %} <!-- 디폴트 컨텍스트 변수가 objecct_list -
 <tr>
-<td>{{ bookmark.id }}</td>
-<td>{{ bookmark.title }}</td>
+{#<td>{{ bookmark.id }}</td>#}
+{#<td>{{ bookmark.title }}</td>#}
 <td>
 <!-- name이 'detail'인 url 패턴으로 연결하되
 bookmark.id가 pk 매개변수로 지정되어
@@ -120,32 +120,6 @@ bookmark.models.Bookmark.__str__()에서 지정하였음. -->
 {% endfor %}
 </ul>
 {% endif %}
-
-<table border="1">
-   <tr>
-      <th>
-          <li><!-- name이 'detail'인 url 패턴으로 연결하되
-bookmark.id가 pk 매개변수로 지정되어
-/bookmark/99/와 같은 url 패턴으로 처리됨.
-따라서 BookmarkDV.as_view() 메소드가 담당하여
-bookmark_detail.html로 연결함. -->
-<a href="{% url 'detail' bookmark.id %}">
-
-</a>
-</li>
-      </th>
-      <th>Title2</th>
-   </tr>
-   <tr>
-      <td>Test11</td>
-      <td>Test12</td>
-   </tr>
-   <tr>
-      <td>Test21</td>
-      <td>Test22</td>
-   </tr>
-</table>
-
 </div>
 </body>
 </html>
