--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -76,8 +76,8 @@ color: white;
 </tr>
 {% for bookmark in object_list %} <!-- 디폴트 컨텍스트 변수가 objecct_list -
 <tr>
-{#<td>{{ bookmark.id }}</td>#}
-{#<td>{{ bookmark.title }}</td>#}
+<td>{{ bookmark.id }}</td>
+<td>{{ bookmark.title }}</td>
 <td>
 <!-- name이 'detail'인 url 패턴으로 연결하되
 bookmark.id가 pk 매개변수로 지정되어
