--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -6,7 +6,7 @@
     <title>장고 북마크 리스트</title>
     <style>
         #tbl {
-            font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+            font-family: "Pyunji R", Arial, Helvetica, sans-serif;
             border-collapse: collapse;
             width: 90%;
             margin: auto;
