--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -8,6 +8,7 @@
         #tbl {
             font-family: "Pyunji R", Arial, Helvetica, sans-serif;
             border-collapse: collapse;
+            text-align: center;
             width: 90%;
             margin: auto;
         }
