--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -29,9 +29,13 @@
             background-color: #6faff6;
             color: white;
         }
+
+        #body {
+            background-color: #e9cef8;
+        }
     </style>
 </head>
-<body>
+<body id="body">
     <div id="content">
         <h1>바로가기 모음</h1>
         
