--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>장고 북마크 리스트</title>
     <style>
+        #body {
+            background-color: #9eddfa;
+        }
+
         #tbl {
             font-family: "Pyunji R", Arial, Helvetica, sans-serif;
             border-collapse: collapse;
@@ -30,9 +34,6 @@
             color: white;
         }
 
-        #body {
-            background-color: #e9cef8;
-        }
     </style>
 </head>
 <body id="body">
