--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -93,6 +93,21 @@
                             </a>
                         </td>
                     </tr>
+
+                    <tr>
+                        <td>4</td>
+                        <td>다음</td>
+                        <td>
+                            <!-- name이 'detail'인 url 패턴으로 연결하되
+                            bookmark.id가 pk 매개변수로 지정되어
+                            /bookmark/99/와 같은 url 패턴으로 처리됨.
+                            따라서 BookmarkDV.as_view() 메소드가 담당하여
+                            bookmark_detail.html로 연결함.  -->
+                            <a href="/bookmark/7/">
+                                https://www.daum.net
+                            </a>
+                        </td>
+                    </tr>
                 
             </table>
         
