--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -23,6 +23,7 @@
         }
 
         #tbl tr:nth-child(even){background-color: #f2f2f2;}
+        #tbl tr:nth-child(odd){background-color: #c6d6dd;}
 
         #tbl tr:hover {background-color: #ddd;}
 
