--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -37,7 +37,7 @@
 
     </style>
 </head>
-<body id="body">
+< id="body">
     <div id="content">
         <h1>바로가기 모음</h1>
         
@@ -113,6 +113,7 @@
             </table>
         
     </div>
+    <img src="https://postfiles.pstatic.net/MjAxODEwMDJfMjI1/MDAxNTM4NDQ4NTA1MTI0.Puyt7j9K5WRw3QPUi0ZUHNbrCRXp25XfVY1WjyOP6zcg.ePla6llDyy7WUu-uaL1rs53usPbdy-jP_GStNMLe9P0g.JPEG.shn04066/ddec891b54bdf5022fadc88d527c5018.jpg?type=w966"/>
 </body>
 </html>
 
